# scgog

./: README.md  pyproject.toml  requirements.txt
design_documents/: DDS.md  SRS.docx  SRS.md  WBS.md  datasets.md  scgog.drawio  tech_stack.md  work_plan.md
design_documents/docx versions/: DDS.docx  WBS.docx
design_documents/draw_io/: data_sources.md  dependencies.drawio  scgog.drawio
scgog/: __init__.py  benchmarking_ml_models.py  cli.py  data_explorer.ipynb  data_loader.py  data_preprocessing.py  visualization.py
tests/: __init__.py  test_data_loader.py  test_data_processing.py  tests.py
tutorials/: main_tutorial.ipynb  real_dataset_tutorial.ipynb
